--- a/app/src/main/res/layout/dialog_photo_news_feed.xml
+++ b/app/src/main/res/layout/dialog_photo_news_feed.xml
@@ -15,12 +15,19 @@
         android:id="@+id/img_photo_news_feed"
         android:layout_width="match_parent"
         android:layout_height="300dp"
+        android:layout_marginBottom="10dp"
         android:layout_marginTop="16dp" />
+
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:id="@+id/img_select_photo_news_feed"
+        android:src="@drawable/ic_photo_black_24dp" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:orientation="horizontal"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="10dp"
         android:layout_height="wrap_content">
 
         <Button
