--- a/app/src/main/res/layout/item_news_feed.xml
+++ b/app/src/main/res/layout/item_news_feed.xml
@@ -27,6 +27,7 @@
         <ImageView
             android:id="@+id/image_view_upload"
             android:layout_width="match_parent"
+            android:visibility="gone"
             android:layout_height="300dp" />
 
         <TextView
