--- a/app/src/main/res/layout/activity_status_news_feed.xml
+++ b/app/src/main/res/layout/activity_status_news_feed.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".StatusNewsFeedActivity">
+    tools:context=".ui.StatusNewsFeedActivity">
 
     <EditText
         android:id="@+id/edt_stt_status_news_feed"
