--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
@@ -7,18 +7,35 @@
     android:layout_height="match_parent"
     tools:context=".ui.MainActivity">
 
-    <FrameLayout
-        android:id="@+id/frame_container"
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/toolbar"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="45dp"
+        android:background="@color/colorPrimaryDark">
 
-    <android.support.design.widget.BottomNavigationView
-        android:id="@+id/bottomNavigation"
+        <android.support.v7.widget.SearchView
+            android:layout_width="match_parent"
+            android:layout_height="35dp"
+            android:iconifiedByDefault="false"
+            android:queryHint="Search view" />
+
+    </android.support.v7.widget.Toolbar>
+
+    <android.support.design.widget.TabLayout
+        android:id="@+id/tab_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_gravity="bottom"
         android:background="#368fc7"
-        app:menu="@menu/bottom_navigation" />
+        android:layout_alignParentBottom="true"
+        app:tabTextColor="#fff"
+        app:tabSelectedTextColor="@color/colorAccent"
+        app:tabIndicatorColor="#ffffff"
+        app:tabMode="fixed"/>
 
-</android.support.design.widget.CoordinatorLayout>
+    <android.support.v4.view.ViewPager
+        android:id="@+id/view_pager"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
+
+</LinearLayout>
