--- a/app/src/main/res/layout/fragment_requests.xml
+++ b/app/src/main/res/layout/fragment_requests.xml
@@ -5,41 +5,10 @@
     android:layout_height="match_parent"
     tools:context=".fragment.RequestsFragment">
 
-    <RelativeLayout
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/recyclerview_requests"
         android:layout_width="match_parent"
-        android:padding="16dp"
-        android:layout_height="match_parent">
-
-        <LinearLayout
-            android:id="@+id/layout_button"
-            android:orientation="horizontal"
-            android:layout_alignParentTop="true"
-            android:weightSum="2"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-            <Button
-                android:id="@+id/btnChoose"
-                android:text="Choose"
-                android:layout_weight="1"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content" />
-
-            <Button
-                android:id="@+id/btnUpload"
-                android:text="Upload"
-                android:layout_weight="1"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content" />
-
-            <ImageView
-                android:id="@+id/imgView"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent" />
-
-        </LinearLayout>
-
-    </RelativeLayout>
+        android:layout_height="match_parent"/>
 
 
 </FrameLayout>
