--- a/app/src/main/res/menu/bottom_navigation.xml
+++ b/app/src/main/res/menu/bottom_navigation.xml
@@ -25,6 +25,6 @@
     <item
         android:id="@+id/itemUser"
         android:icon="@drawable/ic_person_black_24dp"
-        android:title="User" />
+        android:title="Me" />
 
 </menu>
